Style scrollbars and misc fixes

--- a/scss/main/_channels.scss
+++ b/scss/main/_channels.scss
@@ -2,6 +2,7 @@
 
 .sidebar-1tnWFu .container-1NXEtd {
     background: var(--xp2-background);
+    border-left: 1px solid grey;
 }
 
 // Mini bar
