--- a/scss/main/_chatbox.scss
+++ b/scss/main/_chatbox.scss
@@ -1,20 +1,38 @@
 @use "../top/vars-scss" as *;
 
 .form-3gdLxP {
-    background: var(--xp2-background-2);
+    // ;
+    
     padding: 0;
+    margin-top: -24px;
 
     &::before {
         display: none;
     }
 
     .channelTextArea-1FufC0 {
-        margin-bottom: 4px;
+        background: var(--xp2-background-2);
         margin-top: 24px;
+        margin-bottom: 0;
+        padding: 4px 0;
+        background-clip: padding-box;
+
+        .webkit-QgSAqd {
+            background: var(--xp2-background-2);
+
+            &::-webkit-scrollbar {
+                width: 0;
+            }
+        }
     }
 
-    .scrollableContainer-15eg7h {
-        background: var(--xp2-background-2);
+    .sansAttachButton-1ERHue {
+        padding: 0 8px;
+        gap: 8px;
+
+        &:has(.uploadInput-YH_iku) {
+            padding-left: 0;
+        }
     }
 
     .textArea-2CLwUE {
@@ -22,21 +40,18 @@
         box-shadow: inset 0 0 1px 1px grey;
 
         .slateTextArea-27tjG0 {
-            left: 10px;
+            padding: 10px;
         }
-    }
-    
-    .sansAttachButton-1ERHue {
-        padding-left: 0;
     }
 
     // Upload button
     .attachButton-_ACFSu {
+        margin-left: unset;
         border: 1px solid $blue-select;
         border-radius: 4px;
-        background: var(--xp2-background) linear-gradient(transparentize($blue-select, 0.8), transparent 20%, transparent 80%, transparentize($blue-select, 0.7));
+        background: var(--xp2-background)
+            linear-gradient(transparentize($blue-select, 0.8), transparent 20%, transparent 80%, transparentize($blue-select, 0.7));
         padding: 8px;
-        margin: 0 8px;
 
         .attachButtonInner-2mwer8 {
             display: none;
