--- a/scss/main/_members.scss
+++ b/scss/main/_members.scss
@@ -22,6 +22,7 @@
 
     .membersWrap-3NUR2t {
         max-height: calc(100% - #{$minibar-height});
+        border-left: 1px solid grey;
     }
 
     .membersWrap-3NUR2t,
