--- a/scss/top/_vars-scss.scss
+++ b/scss/top/_vars-scss.scss
@@ -37,6 +37,10 @@ $white-overlay: hsla(0, 0%, 100%, 0.7);
 $black-overlay: hsla(0, 0%, 0%, 0.7);
 
 $channels-blue: rgb(106, 128, 218);
-$chat-blue: rgb(214, 224, 248);
+$chat-blue-light: rgb(216, 226, 248);
+$chat-blue-dark: rgb(7, 16, 39);
 $tabs-blue: rgb(18, 66, 166);
 $tabs-center-blue: rgb(48, 106, 198);
+
+$scroll-blue-light: rgb(199, 216, 255);
+$scroll-blue-dark: rgb(187, 206, 247);
